asm_tests/other_testfiles/invalid_files/error7.s
.name "MORO"
.comment "MORJESTA!"

add r1, r2, %12
